--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" />
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -41,7 +43,7 @@
             <div class="inputs">
                 <div class="input-group">
                     <label" for="">Departure</label>
-                    <input class="inp-style" type="date" name="">
+                        <input class="inp-style" type="date" name="">
                 </div>
                 <div class="input-group">
                     <label for="">Return</label>
@@ -50,21 +52,33 @@
             </div>
             <div class="input-group f-class">
                 <div>
-                    <label for="">First Class ($150)</label>
-                    <input class="inp-style inp-width" type="number" name="">
+                    <label for="">First Class ($ <span id="firstClass-Price">150</span>))</label>
+                    <input class="inp-style inp-width" type="number" name="" id="firstClass-quantity" value="1">
                 </div>
-                <div class="plus-minus-btn">
-                    <p>+ -</p>
+                <div class="plus-minus-btn f-class">
+                    <button class="btn btn-default" onclick="planeTicket('firstClass', false)">
+                        <i class="fas fa-minus"></i>
+                    </button>
+                    <button class="btn btn-default" onclick="planeTicket('firstClass',true)">
+                        <i class="fas fa-plus"></i>
+                    </button>
                 </div>
             </div>
-            
+
             <div class="input-group f-class">
                 <div>
-                    <label for="">Economy ($100)</label>
-                    <input class="inp-style inp-width" type="number" name="">
+                    <label for="">Economy ($ <span id="economy-Price">100</span>)</label>
+                    <input class="inp-style inp-width" type="number" name="" id="economy-quantity" value="1">
+
                 </div>
-                <div class="plus-minus-btn">
-                    <p> <span>+</span> <span>-</span> </p>
+                <div class="plus-minus-btn f-class">
+
+                    <button class="btn btn-default" onclick="planeTicket('economy',false)">
+                        <i class="fas fa-minus"></i>
+                    </button>
+                    <button class="btn btn-default" onclick="planeTicket('economy',true)">
+                        <i class="fas fa-plus"></i>
+                    </button>
                 </div>
             </div>
             <div class="calculations">
@@ -73,7 +87,7 @@
                         <p>Subtotal</p>
                     </div>
                     <div class="right">
-                        <p>$500</p>
+                        <p>$ <span id="subTotal">250</span></p>
                     </div>
                 </div>
 
@@ -82,7 +96,7 @@
                         <p>Charge 10% VAT</p>
                     </div>
                     <div class="right">
-                        <p>$50</p>
+                        <p>$<span id="vat">25</span></p>
                     </div>
                 </div>
                 <hr>
@@ -91,7 +105,7 @@
                         <h4>Total</h4>
                     </div>
                     <div class="right">
-                        <p>$550</p>
+                        <p>$ <span id="total">275</span></p>
                     </div>
                 </div>
             </div>
@@ -100,11 +114,59 @@
 
         <div class="booking-content">
             <h1>discover <br> around the world</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicingelit. Provident voluptatibus quam fuga laborumalias veniam libero autem quasi maxime ullam vero nama imi dolor, architecto ab facilis eaque deserunt nobise voluptatibus quam</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicingelit. Provident voluptatibus quam fuga laborumalias
+                veniam libero autem quasi maxime ullam vero nama imi dolor, architecto ab facilis eaque deserunt nobise
+                voluptatibus quam</p>
         </div>
-    </section>
+        </section>
+        <!--Thank You-->
+        <script>
+            function planeTicket(ticket, isIncrease) {
+                const inputEconomy = document.getElementById(ticket + '-quantity');
+                const economyCount = parseInt(inputEconomy.value);
+                console.log(economyCount);
+                ///const economyNewCount = economyCount + 1;
+                let economyNewCount = economyCount;
+                if (isIncrease == false) {
+                    economyNewCount = economyCount - 1;
+                }
+                if (isIncrease == true) {
+                    economyNewCount = economyCount + 1;
+                }
+                inputEconomy.value = economyNewCount;
+                // const totalPrice = economyNewCount * 100;
+                let totalTicketPrice= 0;
+                if (ticket == "economy") {
+                    totalTicketPrice = economyNewCount * 100;
+                }
+                if (ticket == "firstClass") {
+                    totalTicketPrice = economyNewCount * 150;
+                }
+                document.getElementById(ticket + '-Price').innerText = totalTicketPrice;
+                totalPrice();
+            }
 
-    <!--Thank You-->
+            function totalPrice(){
+                const firstClassInput = getInputValue('firstClass');
+                const economyInput  = getInputValue('economy');
+                
+                const SubTotalPrice = firstClassInput * 150 + economyInput * 100;
+                console.log(SubTotalPrice);
+                document.getElementById('subTotal').innerText = SubTotalPrice;
+                const vat =  SubTotalPrice * 0.1;
+                document.getElementById('vat').innerText = vat;
+
+                const SubTotalWithVatPrice = SubTotalPrice + vat;
+                document.getElementById('total').innerText = SubTotalWithVatPrice;
+            }
+            function getInputValue(ticket){
+                const inputEconomy = document.getElementById(ticket + '-quantity');
+                const economyCount = parseInt(inputEconomy.value);
+                return economyCount;
+
+            }
+
+        </script>
 </body>
 
 </html>
